# image_processor

./: Cargo.toml  README.md
benches/: image_processor_bench.rs
resources/: fruit.jpg:Zone.Identifier
src/: cli.rs  image_processor.rs  lib.rs  main.rs
