[package]
name = "image_processor"
author = "William Bergen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
image2 = "1.9.2"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]}

[[bench]]
name = "image_processor_bench"
harness = false
